# parabuild-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOP.md  LICENSE  README.md  README_zh.md
.github/workflows/: ci.yml  release.yml
examples/: complete_usage.rs  cuda_quick_start.rs  get_cuda_device_uuids.rs  makefile_project.sh  quick_start.rs
src/: cuda_utils.rs  filesystem_utils.rs  handlebars_helper.rs  lib.rs  main.rs  parabuilder.rs
tests/: autosave_test.sh  ctrl-c_test.sh
tests/example_cmake_project/: .gitignore  CMakeLists.txt
tests/example_cmake_project/src/: main.cpp  main.cpp.template
tests/example_cuda_project/: CMakeLists.txt
tests/example_cuda_project/src/: main.cu
tests/example_gpu_test/: CMakeLists.txt
tests/example_gpu_test/src/: main.cpp
tests/example_makefile_project/: Makefile
tests/example_makefile_project/src/: main.cpp
tests/example_project/: CMakeLists.txt
tests/example_project/src/: main.cpp  main.cpp.template
tests/example_run_time_consuming_project/: CMakeLists.txt
tests/example_run_time_consuming_project/src/: main.cpp  main.cpp.template
