[package]
name = "parabuild"
version = "0.2.3"
edition = "2021"
authors = ["Jarden Pan <xm.jarden@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/panjd123/parabuild-rust"
homepage = "https://github.com/panjd123/parabuild-rust"
description = "A parallel build utility for template heavy projects."
keywords = ["build", "parallel", "template"]
categories = ["development-tools::profiling", "asynchronous"]
default-run = "parabuild"

[dependencies]
fs_extra = "1.3.0"
ignore = "0.4"
handlebars = "6"
serde_json = "1.0"
crossbeam-channel = "0.5"
tempfile = "3.6"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]

[lib]
name = "parabuild"
path = "src/lib.rs"

[[bin]]
name = "parabuild"
path = "src/main.rs"